# Q4-Capstone-Dev-Talk

./: README.md  db.sqlite3  pyproject.toml  style.css
community/: admin.py  forms.py  models.py  views.py
community/migrations/: 0001_initial.py
config/: .env  settings.py  urls.py
custom_users/: admin.py  forms.py  models.py  signals.py  views.py
custom_users/migrations/: 0001_initial.py  0002_alter_uzer_avatar.py  0002_auto_20210707_1917.py  0003_alter_uzer_avatar.py  0004_alter_uzer_avatar.py  0005_alter_uzer_avatar.py  0006_alter_uzer_avatar.py  0007_alter_uzer_avatar.py  0008_alter_uzer_avatar.py  0009_alter_uzer_avatar.py  0010_alter_uzer_avatar.py  0011_alter_uzer_avatar.py
notifs/: admin.py  apps.py  models.py  views.py
notifs/migrations/: 0001_initial.py  0002_notifs_message.py
static/: form.css  index.css  profile.css  style.css  users.css
templates/: community.html  community_detail.html  form.html  home.html  index.html  notifs.html  profile.html  uploads.html  users.html  video_background.html
uploads/: admin.py  forms.py  models.py  views.py
uploads/migrations/: 0001_initial.py  0002_alter_image_image.py  0002_comment.py
video/: urls.py  views.py
