[tool.poetry]
name = "q4-capstone-dev-talk"
version = "0.1.0"
description = ""
authors = ["YesseniaMuniz JessiChavez LawrenceSmith MikeJones"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
